# Complex-codes

./: .gitignore  cmake idea.txt
DELD/: area_51.c  binary_input.py  chatgpt.c  logical_gates  logical_gates.c  logical_gates.txt  logical_gates.txt.c  magic_swap.py  testing_gates
miscelleneous_code/: CMakeLists.txt
sort/: on_sort.c
